--- a/ejercicio015_gestordestinos/style.css
+++ b/ejercicio015_gestordestinos/style.css
@@ -3,13 +3,35 @@
     width: 400px;
     height: 400px;
     padding: 40px 20px 20px 20px;
-    background-color: rgb(255, 255, 0);
+    background: rgb(238,249,55);
+    background: radial-gradient(circle, rgba(238,249,55,1) 49%, rgba(220,195,0,1) 98%);
     border-radius: 20px;
     margin: 10px;
     text-align: center;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
-
+    box-shadow: 2px 2px 2px 2px rgba(109, 95, 2, 0.504);
 }
+
 .foto{
     width: 100%;
+    box-shadow: 2px 2px 2px 2px rgba(109, 95, 2, 0.504);
+    border-radius: 15px;
+}
+#dorsal{
+    display: grid;
+    place-items: center;
+    background-color: azure;
+    margin-bottom: 50px;
+    width: 75px;
+    font-size: 2em;
+}
+#franja{
+    background-color: blue;
+    text-size-adjust: auto;
+    height: 20px;
+    width: 75px;
+}
+#formulario{
+    background-color: yellow;
+    height: 50px;
 }
