--- a/ejercicio022_llamada_pelicula/style.css
+++ b/ejercicio022_llamada_pelicula/style.css
@@ -6,6 +6,7 @@
     border-radius: 25px;
     margin: 30px;
     float: left;
+    box-shadow: 3px 3px rgba(0, 0, 0, 0.302);
 }
 #portada img{
     width: 90%;
@@ -14,7 +15,9 @@
     border-radius: 25px;
 }
 #informacion{
-    padding: 3px;
+    
+
+
 }
 .texto{
     margin-top: 3px;
